--- a/PhoneVersion/analyze.html
+++ b/PhoneVersion/analyze.html
@@ -1,28 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <img src="assets/arrow.svg">
-            <h1 class="h1-second-page">Analyze</h1>
-        </header>
-
-        <section class="graphic">
-            <div>
-                <p>Oct - Feb  <img src="assets/arrow-down.svg"></p>
-            </div>
-            <div class="scale">
-               
-            </div>
-        </section>
-
-
-
-
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="analyze.css">
+</head>
+<body>
+    <header>
+        <a href="index.html"><div class="arrow left"></div></a>
+        <h1>Analyze</h1>
+    </header>   
+    <section id="graphic">
+        <div class="month">
+            <p>Oct - Feb</p>
+            <div class="arrow down"></div>
+        </div>
+        <div>
+            <img src="assets/schedule.svg">
+        </div>
+        <div class="date">
+            <p>Oct</p>
+            <p>Nov</p>
+            <p>Dec</p>
+            <p>Jan</p>
+            <p>Feb</p>
+        </div>
+    </section>
+    <article>
+        <p>Total balance</p>
+        <h3>$1.924,35</h3>
+    </article>
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2" class="items-center"><h2>Transaction detailes</h2></th>
+                <th class="items-right"><p>View All</p></th>
+             </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="items-left"><img src="assets/dribbble.svg"></td>
+                <td class="items-center">
+                    <p class="line-one">Dribbble</p><p>13 jan 22</p>
+                </td>
+                <td colspan="2" class="items-right">
+                    <p class="line-one">-$102.24</p><p>3:24 PM</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="items-left"><img src="assets/amazon.svg"></td>
+                <td class="items-center">
+                    <p class="line-one">Amazon Shoping</p><p>12 jan 22</p>
+                </td>
+                <td colspan="2" class="items-right">
+                    <p class="line-one">-$32.24</p><p>2:35 PM</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="items-left"><img src="assets/youtube.svg"></td>
+                <td class="items-center">
+                    <p class="line-one">YouTube TV</p><p>9 jan 22</p>
+                </td>
+                <td colspan="2" class="items-right">
+                    <p class="line-one">-$20</p><p>6:10 PM</p>
+                </td>
+            </tr>
+            <tr>
+                <td class="items-left"><img src="assets/paypal.svg"></td>
+                <td class="items-center">
+                    <p class="line-one">Paypal</p><p>7 jan 22</p>
+                </td>
+                <td colspan="2" class="items-right">
+                    <p class="line-one">-$180</p><p>7:00 PM</p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <nav>
+        <a href="index.html" class="nav-link">
+            <img src="assets/home.svg">
+        </a>
+        <a href="collect.html" class="nav-link">
+            <img src="assets/collect.svg">
+        </a>
+        <a href="#" class="nav-link">
+            <img src="assets/plus.svg">
+        </a>
+        <a href="#" class="nav-link">
+            <img src="assets/bell.svg">
+        </a>
+        <a href="#" class="nav-link">
+            <img src="assets/acc.svg">
+        </a>     
+    </nav>
+</body>
 </html>
