--- a/PhoneVersion/index.html
+++ b/PhoneVersion/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>MobileVersion</title>
- <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0" /></head> --> 
+ <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0" />--> 
 </head>
  <body>
-
     <header>
         <div>  
             <h1>Hello,</h1>
@@ -18,8 +17,7 @@
         <div></div>
         <img id="icon" src="assets/avatar.svg">
     </header>
-
-    <section class="card">
+    <section id="card">
         <div>
             <h1>$1.924,35</h1>
             <p>5489 7654 3210 7894</p>
@@ -28,18 +26,16 @@
             <img src="assets/mastercard.svg" class="mastercard">
         </div>
     </section>
-   
-    <aside>
-        <a href="analyze.html"><article><img src="assets/analyze.svg" alt=""> </article> </a>
-        <article><img src="assets/calendar.svg" alt=""> </article> 
-        <article><img src="assets/document.svg" alt=""> </article>
-        <article><img src="assets/icon (4).svg" alt=""> </article>
+    <article>
+        <a href="analyze.html"><img src="assets/analyze.svg" alt=""></a>
+        <a ><img src="assets/calendar.svg" alt=""> </a> 
+        <a><img src="assets/document.svg" alt=""> </a>
+        <a href="collect.html"><img src="assets/icon (4).svg" alt=""> </a>     
         <p>Analyze</p>
         <p>Calendar</p>
         <p>Document</p>
         <p>Collect</p>
-    </aside>
-
+    </article>
     <table>
         <thead>
             <tr>
@@ -84,30 +80,24 @@
                     <p class="line-one">-$180</p><p>7:00 PM</p>
                 </td>
             </tr>
-            
         </tbody>
     </table>
-
     <nav>
         <a href="#" class="nav-link">
             <img src="assets/home.svg">
         </a>
-        <a href="#" class="nav-link">
+        <a href="collect.html" class="nav-link">
             <img src="assets/collect.svg">
         </a>
-  
         <a href="#" class="nav-link">
             <img src="assets/plus.svg">
         </a>
-
         <a href="#" class="nav-link">
             <img src="assets/bell.svg">
         </a>
         <a href="#" class="nav-link">
             <img src="assets/acc.svg">
-        </a>
-      
+        </a>     
     </nav>
-
 </body>
 </html>
