--- a/PhoneVersion/analyze.html
+++ b/PhoneVersion/analyze.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="analyze.css">
+    <link rel="stylesheet" href="styles/analyze.css">
+    <link rel="stylesheet" href="styles/navbar.css">
 </head>
 <body>
     <header>
@@ -18,8 +19,12 @@
         </div>
         <div>
             <img src="assets/schedule.svg">
+            <div class="container">
+                <div class="money">$ 4 600</div>
+                <div class="circle"></div>
+            </div>
         </div>
-        <div class="date">
+        <div class="mont-date">
             <p>Oct</p>
             <p>Nov</p>
             <p>Dec</p>
