--- a/PhoneVersion/collect.html
+++ b/PhoneVersion/collect.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="collect.css">
+    <link rel="stylesheet" href="styles/collect.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <title>MobileVersion</title>
 </head>
 <body>
+    <header>
+        <div>  
+            <h1>Bank Cards</h1>
+        </div>
+        <div></div>
+        <img id="icon" src="assets/avatar.svg">
+    </header>
+    <article>
+        <p>Balance</p>
+        <h1>$1.924,35</h1>
+    </article>
+    <section id="card">
+        <div id="first-card">
+            <div class="card-content">
+                <p>5489 7654 3210 7894</p>
+                <p class="date">04/24</p>
+            </div> 
+            <img src="assets/vector.svg" class="vector">
+            <img src="assets/mastercard.svg" class="mastercard">
+        </div>
+        <div id="second-card">
+            <span>
+                <p>5489 7654 3210 7894</p>
+                <p class="date">04/24</p>
+            </span>
+            <img src="assets/vector.svg" class="vector">
+            <img src="assets/mastercard.svg" class="mastercard">
+        </div>
+    </section>
+    <footer>
+        <a href="#first-card" class="active"></a>
+        <a href="#second-card"></a>
+        <a></a>
+    </footer>
     <nav>
         <a href="index.html" class="nav-link">
             <img src="assets/home.svg">
