--- a/PhoneVersion/index.html
+++ b/PhoneVersion/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/navbar.css">
     <title>MobileVersion</title>
  <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0" />--> 
 </head>
@@ -18,13 +19,15 @@
         <img id="icon" src="assets/avatar.svg">
     </header>
     <section id="card">
-        <div>
+        <div class="card-data">
             <h1>$1.924,35</h1>
-            <p>5489 7654 3210 7894</p>
-            <p class="date">04/24</p>
-            <img src="assets/vector.svg" class="vector">
-            <img src="assets/mastercard.svg" class="mastercard">
+            <div>
+                <p>5489 7654 3210 7894</p>
+                <p class="date">04/24</p>   
+            </div>
         </div>
+        <div class="card-vector"><img src="assets/vector.svg" ></div>
+        <img src="assets/mastercard.svg" class="mastercard">
     </section>
     <article>
         <a href="analyze.html"><img src="assets/analyze.svg" alt=""></a>
